[Vishnu]-Added Serach and Sort API's for BookStore
